--- a/packages/native_pdf_view/pubspec.yaml
+++ b/packages/native_pdf_view/pubspec.yaml
@@ -10,7 +10,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  extended_image: ^0.7.1
+  extended_image: 
+    git:
+      url: git://github.com/manoThanabalan/extended_image
   synchronized: ^2.2.0
   native_pdf_renderer: 
     path: ../native_pdf_renderer
